[gd_scene load_steps=14 format=2]

[ext_resource path="res://font/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://font/3Dventure.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/menu_levelselect.gd" type="Script" id=3]
[ext_resource path="res://sprites/creature_01.png" type="Texture" id=4]
[ext_resource path="res://sprites/creature_02.png" type="Texture" id=5]
[ext_resource path="res://font/basic_text.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 8
font_data = ExtResource( 1 )

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container_l" type="Container" parent="HBoxContainer"]
margin_right = 29.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 33.0
margin_right = 326.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[node name="Container_top" type="Container" parent="HBoxContainer/VBoxContainer"]
margin_right = 293.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="title_label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 293.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL SELECT"
align = 1
valign = 1

[node name="button_tutorial" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 293.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0.411765, 0.309804, 0.470588, 1 )
custom_colors/font_color = Color( 0.662745, 0.498039, 0.760784, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "TUTORIAL"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_level_01" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 293.0
margin_bottom = 161.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0.411765, 0.309804, 0.470588, 1 )
custom_colors/font_color = Color( 0.662745, 0.498039, 0.760784, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "LEVEL 1"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_level_02" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 293.0
margin_bottom = 194.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0.411765, 0.309804, 0.470588, 1 )
custom_colors/font_color = Color( 0.662745, 0.498039, 0.760784, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
disabled = true
text = "LEVEL 2"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_level_03" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 293.0
margin_bottom = 228.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0.411765, 0.309804, 0.470588, 1 )
custom_colors/font_color = Color( 0.662745, 0.498039, 0.760784, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
disabled = true
text = "LEVEL 3"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_level_04" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 232.0
margin_right = 293.0
margin_bottom = 262.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0.411765, 0.309804, 0.470588, 1 )
custom_colors/font_color = Color( 0.662745, 0.498039, 0.760784, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
disabled = true
text = "LEVEL 4"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_level_05" type="Button" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 244.0
margin_right = 293.0
margin_bottom = 271.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0.411765, 0.309804, 0.470588, 1 )
custom_colors/font_color = Color( 0.662745, 0.498039, 0.760784, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
disabled = true
text = "LEVEL 5"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blurb_label3" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 293.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.662745, 0.498039, 0.760784, 1 )
text = "Use ARROW KEYS and SPACE to select an option.

ESC to go back"
align = 1
valign = 1
autowrap = true

[node name="Container_bottom" type="Container" parent="HBoxContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 293.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container_r" type="Container" parent="HBoxContainer"]
margin_left = 330.0
margin_right = 360.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="sprite_bottom_right" type="Sprite" parent="."]
position = Vector2( 321, 321 )
texture = ExtResource( 4 )

[node name="sprite_bottom_left" type="Sprite" parent="."]
position = Vector2( 41, 321 )
texture = ExtResource( 5 )
[connection signal="pressed" from="HBoxContainer/VBoxContainer/button_tutorial" to="." method="_on_button_tutorial_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/button_level_01" to="." method="_on_button_level_01_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/button_level_02" to="." method="_on_button_level_02_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/button_level_03" to="." method="_on_button_level_03_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/button_level_04" to="." method="_on_button_level_04_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/button_level_05" to="." method="_on_button_level_05_pressed"]
